--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -1,4 +1,24 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+
+    <div class="card mx-auto">
+        <div class="card-body">
+            {{ form_start(form, {'attr': {'class': 'form-group'}}) }}
+                {{ form_label(form.name, 'Name:', {'label_attr': {'class': 'control-label'}}) }}
+                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.name) }}
+
+                {{ form_label(form.email, 'Email:', {'label_attr': {'class': 'control-label'}}) }}
+                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.email) }}
+
+                {{ form_label(form.address, 'Address:', {'label_attr': {'class': 'control-label'}}) }}
+                {{ form_widget(form.address, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.address) }}
+
+                {{ form_label(form.phone, 'Phone:', {'label_attr': {'class': 'control-label'}}) }}
+                {{ form_widget(form.phone, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.phone) }}
+
+                <button class="btn btn-primary mt-3">{{ button_label|default('Save') }}</button>
+            {{ form_end(form) }}
+        </div>
+    </div>
