--- a/templates/contact/edit.html.twig
+++ b/templates/contact/edit.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Edit Contact{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
     <h1>Edit Contact</h1>
 
     {{ include('contact/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_contact_index') }}">back to list</a>
+    <a href="{{ path('app_contact_show') }}"><i class="fas fa-arrow-left"></i> Back to list</a>
 
-    {{ include('contact/_delete_form.html.twig') }}
+</div>
 {% endblock %}
