--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -3,9 +3,12 @@
 {% block title %}New Contact{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
     <h1>Create new Contact</h1>
 
     {{ include('contact/_form.html.twig') }}
 
-    <a href="{{ path('app_contact_index') }}">back to list</a>
+    <a href="{{ path('app_contact_show') }}"><i class="fas fa-arrow-left"></i>  Back to list</a>
+
+</div>
 {% endblock %}
